--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nyuu",
-  "version": "0.4.2",
+  "version": "0.4.2-Obfuscate",
   "description": "Flexible usenet binary poster",
   "keywords": [
     "usenet",
