--- a/.github/workflows/build-dev-linux.yml
+++ b/.github/workflows/build-dev-linux.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-dev-linux-amd64:
+  build-dev-linux:
     strategy:
       fail-fast: false
       matrix:
@@ -12,6 +12,10 @@ jobs:
             arch: x64
             xz_bcj: --x86
             name: amd64
+          - target: aarch64-linux-musl
+            arch: arm64
+            xz_bcj:
+            name: aarch64
     name: Build ${{ matrix.name }} Linux binary
     runs-on: ubuntu-latest
     env:
@@ -44,52 +48,6 @@ jobs:
       - run: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-strip nexe/nyuu
       - run: tar --group=nobody --owner=nobody -cf - -C nexe nyuu ../config-sample.json | xz -9e ${{ matrix.xz_bcj }} --lzma2 > nyuu.txz
       - uses: actions/upload-artifact@v3
-        with:
-          path: ./nyuu.txz
-          name: nyuu-${{ github.ref_name }}-linux-${{ matrix.name }}.7z
-          retention-days: 5
-
-  build-dev-linux-arm64:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - target: aarch64-linux-musl
-            arch: arm64
-            xz_bcj: --arm64
-            name: arm64
-    name: Build ${{ matrix.name }} Linux binary
-    runs-on: ubuntu-24.04-arm
-    env:
-      BUILD_ARCH: ${{ matrix.arch }}
-      BUILD_LOGLEVEL: verbose
-      BUILD_CONFIGURE: '--with-arm-float-abi=hard --with-arm-fpu=vfpv3-d16'
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.9' # workaround "cannot import name 'Mapping' from 'collections'" error
-      - uses: Lesmiscore/musl-cross-compilers@jockie
-        id: musl
-        with:
-          target: ${{ matrix.target }}
-      - name: Install i386 dev
-        run: |
-          sudo dpkg --add-architecture i386
-          sudo apt update
-          sudo apt install -y libstdc++-$(c++ -dumpversion)-dev:i386 libc6-dev:i386 g++-multilib
-        if: ${{ matrix.arch == 'arm' }}
-      - run: npm install --production
-      - run: (cd nexe && npm install --production)
-      - run: (cd nexe && node build)
-        env:
-          CC: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-cc
-          CXX: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-c++
-          CC_host: cc
-          CXX_host: c++
-      - run: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-strip nexe/nyuu
-      - run: tar --group=nobody --owner=nobody -cf - -C nexe nyuu ../config-sample.json | xz -9e ${{ matrix.xz_bcj }} --lzma2 > nyuu.txz
-      - uses: actions/upload-artifact@v4
         with:
           path: ./nyuu.txz
           name: nyuu-${{ github.ref_name }}-linux-${{ matrix.name }}.7z
