--- a/.github/workflows/build-dev-linux.yml
+++ b/.github/workflows/build-dev-linux.yml
@@ -45,6 +45,9 @@ jobs:
           CXX: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-c++
           CC_host: cc
           CXX_host: c++
+          CFLAGS: ${{ matrix.arch == 'arm64' && '' || '' }}
+          CXXFLAGS: ${{ matrix.arch == 'arm64' && '' || '' }}
+          LDFLAGS: ${{ matrix.arch == 'arm64' && '' || '' }}
       - run: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-strip nexe/nyuu
       - run: tar --group=nobody --owner=nobody -cf - -C nexe nyuu ../config-sample.json | xz -9e ${{ matrix.xz_bcj }} --lzma2 > nyuu.txz
       - uses: actions/upload-artifact@v4
