--- a/.github/workflows/build-dev-linux.yml
+++ b/.github/workflows/build-dev-linux.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-dev-linux:
+  build-dev-linux-amd:
     strategy:
       fail-fast: false
       matrix:
@@ -12,11 +12,6 @@ jobs:
             arch: x64
             xz_bcj: --x86
             name: amd64
-            nodever: 12.22.12
-          - target: aarch64-linux-musl
-            arch: arm64
-            xz_bcj:
-            name: aarch64
             nodever: 12.22.12
     name: Build ${{ matrix.name }} Linux binary
     runs-on: ubuntu-latest
@@ -41,16 +36,45 @@ jobs:
         if: ${{ matrix.arch == 'arm' }}
       - run: npm install --production
       - run: (cd nexe && npm install --production)
-      - run: (cd nexe && node build --targets=linux-${{ matrix.arch }}-${{ matrix.nodever }})
+      - run: (cd nexe && node build)
         env:
           CC: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-cc
           CXX: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-c++
           CC_host: cc
           CXX_host: c++
-          CFLAGS: ${{ matrix.arch == 'arm64' && '' || '' }}
-          CXXFLAGS: ${{ matrix.arch == 'arm64' && '' || '' }}
-          LDFLAGS: ${{ matrix.arch == 'arm64' && '' || '' }}
       - run: ${{ steps.musl.outputs.path }}/${{ matrix.target }}-strip nexe/nyuu
+      - run: tar --group=nobody --owner=nobody -cf - -C nexe nyuu ../config-sample.json | xz -9e ${{ matrix.xz_bcj }} --lzma2 > nyuu.txz
+      - uses: actions/upload-artifact@v4
+        with:
+          path: ./nyuu.txz
+          name: nyuu-${{ github.ref_name }}-linux-${{ matrix.name }}.7z
+          retention-days: 5
+
+  build-dev-linux-arm64:
+    name: Build ARM64 Linux binary
+    runs-on: ubuntu-24.04-arm64
+    strategy:
+      matrix:
+        include:
+          - arch: arm64
+            name: aarch64
+            nodever: 12.22.12
+            xz_bcj:
+    env:
+      BUILD_ARCH: ${{ matrix.arch }}
+      BUILD_LOGLEVEL: verbose
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.nodever }}
+      - run: npm install --production
+      - run: (cd nexe && npm install --production)
+      - run: (cd nexe && node build --targets=linux-arm64-${{ matrix.nodever }})
+      - run: strip nexe/nyuu
       - run: tar --group=nobody --owner=nobody -cf - -C nexe nyuu ../config-sample.json | xz -9e ${{ matrix.xz_bcj }} --lzma2 > nyuu.txz
       - uses: actions/upload-artifact@v4
         with:
