--- a/.github/workflows/build-dev-mac.yml
+++ b/.github/workflows/build-dev-mac.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   build-dev-macos-arm64:
     name: Build macOS ARM64 binary
-    runs-on: macos-latest
+    runs-on: macos-14
     env:
       BUILD_ARCH: arm64
       BUILD_LOGLEVEL: verbose
@@ -16,11 +16,12 @@ jobs:
           python-version: '3.9' # workaround "cannot import name 'Mapping' from 'collections'" error
       - run: npm install --production
       - run: (cd nexe && npm install --production)
-      - run: (cd nexe && node build)
+      - run: (cd nexe && node build --targets=macos-arm64-12.22.1)
         env:
           CC: cc
           CXX: c++
           CXXFLAGS: "-Wno-enum-constexpr-conversion -Wno-error"
+          CPPFLAGS: "-Wno-enum-constexpr-conversion -Wno-error"
       - run: tar --owner=$(id -un) --group=staff -cf - -C nexe nyuu ../config-sample.json | xz -9e > nyuu.txz
       - uses: actions/upload-artifact@v4
         with:
