--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,17 +89,48 @@ jobs:
           asset_name: nyuu-${{ steps.get_release.outputs.tag_name }}-linux-${{ matrix.name }}.tar.xz
           asset_content_type: application/octet-stream
 
-  build-macos-arm64:
-    name: Build macOS ARM64 binary
+  build-mac-x64:
+    name: Build x64 MacOS binary
+    runs-on: macos-latest
+    env:
+      BUILD_ARCH: x64
+      BUILD_LOGLEVEL: verbose
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.9' # workaround "cannot import name 'Mapping' from 'collections'" error
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+      - run: npm install --production
+      - run: (cd nexe && npm install --production)
+      - run: (cd nexe && node build)
+      - run: strip nexe/nyuu
+      - run: mv nexe/nyuu . && tar --uname '' --gname '' --options='compression-level=9' -Jcf nyuu.txz nyuu config-sample.json
+      - uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.get_release.outputs.upload_url }} 
+          asset_path: ./nyuu.txz
+          asset_name: nyuu-${{ steps.get_release.outputs.tag_name }}-macos-x64.tar.xz
+          asset_content_type: application/octet-stream
+
+
+  build-mac-arm64:
+    name: Build arm64 MacOS binary
     runs-on: macos-latest
     env:
       BUILD_ARCH: arm64
       BUILD_LOGLEVEL: verbose
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4
+      - uses: actions/setup-python@v4
         with:
-          node-version: '20'
+          python-version: '3.9' # workaround "cannot import name 'Mapping' from 'collections'" error
       - name: Get release
         id: get_release
         uses: bruceadams/get-release@v1.2.3
@@ -108,38 +139,14 @@ jobs:
       - run: npm install --production
       - run: (cd nexe && npm install --production)
       - run: (cd nexe && node build)
-      - run: tar --owner=$(id -un) --group=staff -cf - -C nexe nyuu ../config-sample.json | xz -9e > nyuu.txz
-      - uses: shogo82148/actions-upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./nyuu.txz
-          asset_name: nyuu-${{ steps.get_release.outputs.tag_name }}-mac-arm64.tar.xz
-          asset_content_type: application/octet-stream
-
-  build-macos-x64:
-    name: Build macOS x64 binary
-    runs-on: macos-13
-    env:
-      BUILD_ARCH: x64
-      BUILD_LOGLEVEL: verbose
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.3
+      - run: strip nexe/nyuu
+      - run: mv nexe/nyuu . && tar --uname '' --gname '' --options='compression-level=9' -Jcf nyuu.txz nyuu config-sample.json
+      - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ github.token }}
-      - run: npm install --production
-      - run: (cd nexe && npm install --production)
-      - run: (cd nexe && node build)
-      - run: tar --owner=$(id -un) --group=staff -cf - -C nexe nyuu ../config-sample.json | xz -9e > nyuu.txz
-      - uses: shogo82148/actions-upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.get_release.outputs.upload_url }} 
           asset_path: ./nyuu.txz
-          asset_name: nyuu-${{ steps.get_release.outputs.tag_name }}-mac-x64.tar.xz
+          asset_name: nyuu-${{ steps.get_release.outputs.tag_name }}-macos-arm64.tar.xz
           asset_content_type: application/octet-stream
 
